--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "dict_keys(['categories', 'coordinates', 'display_phone', 'distance', 'id', 'image_url', 'is_closed', 'location', 'name', 'phone', 'price', 'rating', 'review_count', 'transactions', 'url'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,19 +149,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "    restaurant_rating = restaurant['rating']\n",
+    "    alternative_rating = alternative['rating']\n",
+    "    #print (restaurant_rating, alternative_rating)\n",
+    "    if restaurant_rating < alternative_rating:\n",
+    "        return restaurant\n",
+    "    if restaurant_rating > alternative_rating :\n",
+    "        return alternative\n",
+    "    else: \n",
+    "        print('These restaurants have the same rating of', restaurant_rating)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
+     ]
+    }
+   ],
    "source": [
     "print(better_restaurant(frontier_restaurant, fork_fig)['name']) # 'Fork & Fig'\n",
     "print(better_restaurant(fork_fig, frontier_restaurant)['name']) # 'Fork & Fig'"
@@ -176,19 +193,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "    restaurant_price = restaurant['price']\n",
+    "    alternative_price = alternative['price']\n",
+    "    #print (restaurant_price, alternative_price)\n",
+    "    if len(restaurant_price) < len(alternative_price):\n",
+    "        return restaurant\n",
+    "    if len(restaurant_price) > len(alternative_price):\n",
+    "        return alternative\n",
+    "    else: \n",
+    "        print('These restaurants have the same price of', restaurant_rating)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
+     ]
+    }
+   ],
    "source": [
     "print(cheaper_restaurant(fork_fig, frontier_restaurant)['name']) # 'Frontier Restaurant'\n",
     "print(cheaper_restaurant(frontier_restaurant, fork_fig)['name']) # 'Frontier Restaurant'"
@@ -210,25 +244,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fork_fig['is_closed'] # False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "frontier_restaurant['is_closed'] # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,28 +293,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'categories': [{'alias': 'burgers', 'title': 'Burgers'},\n",
+       "   {'alias': 'sandwiches', 'title': 'Sandwiches'},\n",
+       "   {'alias': 'salad', 'title': 'Salad'}],\n",
+       "  'coordinates': {'latitude': 35.10871, 'longitude': -106.56739},\n",
+       "  'display_phone': '(505) 881-5293',\n",
+       "  'distance': 3571.724649307866,\n",
+       "  'id': 'fork-and-fig-albuquerque',\n",
+       "  'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/_-DpXKfS3jv6DyA47g6Fxg/o.jpg',\n",
+       "  'is_closed': False,\n",
+       "  'location': {'address1': '6904 Menaul Blvd NE',\n",
+       "   'address2': 'Ste C',\n",
+       "   'address3': '',\n",
+       "   'city': 'Albuquerque',\n",
+       "   'country': 'US',\n",
+       "   'display_address': ['6904 Menaul Blvd NE',\n",
+       "    'Ste C',\n",
+       "    'Albuquerque, NM 87110'],\n",
+       "   'state': 'NM',\n",
+       "   'zip_code': '87110'},\n",
+       "  'name': 'Fork & Fig',\n",
+       "  'phone': '+15058815293',\n",
+       "  'price': '$$',\n",
+       "  'rating': 4.5,\n",
+       "  'review_count': 604,\n",
+       "  'transactions': [],\n",
+       "  'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    pass"
+    "    open_restaurant_list =[]\n",
+    "    for restaurant in restaurants:\n",
+    "        if restaurant['is_closed'] == False:\n",
+    "            open_restaurant_list.append(restaurant)\n",
+    "        return (open_restaurant_list)\n",
+    "            \n",
+    "open_restaurants(restaurants)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(open_restaurants(restaurants)) # 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fork & Fig'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)[0]['name'] # 'Fork & Fig'"
    ]
@@ -294,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
